# Streamlit_Dashboard

./: App.py  Dockerfile  OLD_App.py  README.md  docker-compose.yml  pyproject.toml  requirements.txt  spc_dash.ipynb  spc_dashboard.py
assets/: requirements.txt
data/cbmc1/: summer25_CBM0C1.xlsx
data/curated/: data_merged.csv  data_merged.parquet
data/stu220/: STU0220_Fall24_25.csv  STU0220_Spring 2024_4.11.24.xlsx
etl/: etl_cbmc1.py
warehouse/: warehouse.duckdb
