[project]
name = "student-insights-dashboard"
version = "1.0.0"
description = "Interactive dashboard for student enrollment and demographics analysis"
requires-python = ">=3.12.3"
dependencies = [
    "streamlit>=1.39.0",
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "plotly>=5.22.0",
    "pyarrow>=16.1.0",
    "fastparquet>=2024.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
